       constant 0
    ** Implementation of ASH-MOD32 on X86 and PPC did not work for the
       shift greater than 32.
    ** FLUSH-DEST did not mark blocks for type check regeneration.
    ** HANDLER-CASE failed to accept declarations in handler clauses
       in some circumstances.

changes in sbcl-0.8.7 relative to sbcl-0.8.6:
  * bug fix: GET-SETF-EXPANSION no longer throws an internal type
    error when called without an explicit environment argument.
    (thanks to Nikodemus Siivola)
  * bug fix: buffered :DIRECTION :IO streams are less likely to become
    confused about their position.  (thanks to Adam Warner and Gerd 
    Moellmann)
  * ASDF-INSTALL bug fix: now parses *PROXY* properly.  (thanks to
    Sean Ross)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** the value of the :REHASH-THRESHOLD argument to MAKE-HASH-TABLE
       is ignored if it is too small, rather than propagating through
       to cause DIVIDE-BY-ZERO or FLOATING-POINT-OVERFLOW errors.
    ** extremely complex negations of CONS types were not being
       sufficiently canonicalized, leading to inconsistencies in
       SUBTYPEP.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.